增加切换头像功能

--- a/app/src/main/res/layout/activity_takephoto.xml
+++ b/app/src/main/res/layout/activity_takephoto.xml
@@ -65,6 +65,7 @@
             android:orientation="vertical"
             android:layout_weight="1"
             android:layout_width="0dp"
+            android:layout_marginTop="6dp"
             >
             <ImageButton
                 android:layout_width="wrap_content"
