--- a/app/src/main/res/layout/layout_putrequest.xml
+++ b/app/src/main/res/layout/layout_putrequest.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/loginbg">
 
     <LinearLayout
         android:layout_width="330dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:orientation="vertical"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="90dp">
         <EditText
             android:id="@+id/EtPutrequestRuid"
             android:layout_width="match_parent"
