--- a/app/src/main/res/layout/layout_putrequest.xml
+++ b/app/src/main/res/layout/layout_putrequest.xml
@@ -10,17 +10,17 @@
         android:layout_gravity="center"
         android:orientation="vertical"
         android:layout_marginTop="90dp">
-        <EditText
-            android:id="@+id/EtPutrequestRuid"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/zhijiao"
-            android:layout_gravity="center"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:paddingLeft="5dp"
-            android:hint="发布人id"
-            android:gravity="top"/>
+        <!--<EditText-->
+            <!--android:id="@+id/EtPutrequestRuid"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@drawable/zhijiao"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:paddingTop="5dp"-->
+            <!--android:paddingBottom="5dp"-->
+            <!--android:paddingLeft="5dp"-->
+            <!--android:hint="发布人id"-->
+            <!--android:gravity="top"/>-->
 
             <EditText
                 android:id="@+id/EtPutrequestContent"
