--- a/app/src/main/res/layout/top_menu_back.xml
+++ b/app/src/main/res/layout/top_menu_back.xml
@@ -13,10 +13,10 @@
         <ImageView
             android:id="@+id/iv_back"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_height="0dp"
+
             android:padding="8dp"
-            android:src="@drawable/tb_icon_actionbar_back" />
+             />
 
         <TextView
             android:id="@+id/tv_top_title"
@@ -28,11 +28,12 @@
             android:textColor="#000000"
             android:textSize="20sp" />
 
-        <Button
+        <ImageButton
             android:id="@+id/btn_fx"
-            android:layout_width="50dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/fenxiang"/>
+            android:background="#ffffff"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            />
     </LinearLayout>
 
 </RelativeLayout>
