--- a/app/src/main/res/layout/layout_homelike_item.xml
+++ b/app/src/main/res/layout/layout_homelike_item.xml
@@ -31,8 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="第一名"
-                android:background="#ffffff"
-                />
+                android:background="#ffffff" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
