--- a/app/src/main/res/layout/layout_homerequest_item.xml
+++ b/app/src/main/res/layout/layout_homerequest_item.xml
@@ -14,7 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="#ffffff">
+        android:background="#ffffff"
+        >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
