--- a/app/src/main/res/layout/personnal_message.xml
+++ b/app/src/main/res/layout/personnal_message.xml
@@ -39,15 +39,15 @@
         <ImageView
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:src="@mipmap/tubiao"
+            android:src="@drawable/personal_touxiang3"
             android:layout_marginTop="50dp"
             android:layout_marginLeft="40dp"
             android:id="@+id/personal_touxiang"
             android:onClick="onClick"
             android:adjustViewBounds="true"
             android:maxWidth="90dp"
-            android:maxHeight="90dp"
-            android:background="@drawable/loginbutton"/>
+            android:maxHeight="90dp"/>
+            <!--android:background="@drawable/loginbutton"/>-->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
